# olympiabot

./: Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
scripts/: load_parsed_olympiads.py  render_transitions.py  temp.py
src/: .env  bot.py  config.py  main.py  utilities.py
src/data/models/: __base.py  __init__.py  __mixins.py  _event_types.py  _events.py  _fields.py  _grades.py  _levels.py  _mixins.py  _subjects.py  _tags.py  _user.py  _users.py
src/data/repositories/: olympiads.py  roles.py  users.py
src/data/schemas/: __init__.py  __mixins.py  _base.py  event_types.py  events.py  fields.py  grades.py  levels.py  subjects.py  tags.py  users.py
src/data/storages/: sqldatabase.py
src/middlewares/: repository_middleware.py
src/routers/: main.py  states.py
src/routers/dialogs/: __init__.py  _dialog_admin.py  _dialog_hello.py  _dialog_help.py  faq.json  hello.py  help.py
src/routers/dialogs/_dialog_olympiad_interests/: callbacks.py  context.py  dialog.py
src/routers/dialogs/_dialog_search_olympiad/: buttons.py  callbacks.py  context.py  dialog.py
src/routers/dialogs/common_components/: buttons.py  callbacks.py  emojis.py  texts.py
src/scripts/: load_parsed_olympiads.py
src/static/: faq.json  parsed.json
